--- a/tokens/config.json
+++ b/tokens/config.json
@@ -203,7 +203,7 @@
           }
         }
       },
-      "primary": {
+      "accent": {
         "hue": {
           "default": {
             "value": "215",
@@ -259,7 +259,7 @@
           }
         }
       },
-      "secondary": {
+      "grey": {
         "hue": {
           "default": {
             "value": "50",
