added button expressive

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -785,6 +785,15 @@
           },
           "type": "typography"
         },
+        "textAlt": {
+          "value": {
+            "fontFamily": "{config.fontFamily.uiAlt}",
+            "fontWeight": "{config.fontWeight.medium}",
+            "lineHeight": "160%",
+            "fontSize": "{config.fontSize.control}"
+          },
+          "type": "typography"
+        },
         "number": {
           "value": {
             "fontFamily": "{config.fontFamily.uiAlt}",
@@ -818,6 +827,15 @@
           "value": {
             "fontFamily": "{config.fontFamily.ui}",
             "fontWeight": "{config.fontWeight.semibold}",
+            "lineHeight": "100%",
+            "fontSize": "{config.fontSize.label}"
+          },
+          "type": "typography"
+        },
+        "textAlt": {
+          "value": {
+            "fontFamily": "{config.fontFamily.uiAlt}",
+            "fontWeight": "{config.fontWeight.medium}",
             "lineHeight": "100%",
             "fontSize": "{config.fontSize.label}"
           },
