update button letterspacing

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -998,6 +998,10 @@
           "value": "0%",
           "type": "letterSpacing"
         },
+        "textAlt": {
+          "value": "4%",
+          "type": "letterSpacing"
+        },
         "number": {
           "value": "2%",
           "type": "letterSpacing"
@@ -1010,6 +1014,10 @@
       "label": {
         "text": {
           "value": "2%",
+          "type": "letterSpacing"
+        },
+        "textAlt": {
+          "value": "4%",
           "type": "letterSpacing"
         },
         "number": {
