update app type

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -788,8 +788,8 @@
           },
           "expressive": {
             "value": {
-              "fontFamily": "{config.fontFamily.uiAlt}",
-              "fontWeight": "SemiBold",
+              "fontFamily": "{config.fontFamily.ui}",
+              "fontWeight": "{config.fontWeight.bold}",
               "lineHeight": "160%",
               "fontSize": "{config.fontSize.control}"
             },
