--- a/tokens/application.json
+++ b/tokens/application.json
@@ -780,7 +780,7 @@
           "default": {
             "value": {
               "fontFamily": "{config.fontFamily.ui}",
-              "fontWeight": "{config.fontWeight.semibold}",
+              "fontWeight": "{config.fontWeight.medium}",
               "lineHeight": "160%",
               "fontSize": "{config.fontSize.control}"
             },
@@ -789,7 +789,7 @@
           "expressive": {
             "value": {
               "fontFamily": "{config.fontFamily.ui}",
-              "fontWeight": "{config.fontWeight.bold}",
+              "fontWeight": "{config.fontWeight.semibold}",
               "lineHeight": "160%",
               "fontSize": "{config.fontSize.control}"
             },
