update config saturation

--- a/tokens/application.json
+++ b/tokens/application.json
@@ -456,7 +456,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%, {config.color.accent.alpha.bg.default})"
+              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 75%, {config.color.accent.alpha.bg.default})"
             }
           },
           "border": {
@@ -466,7 +466,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 50%, {config.color.accent.alpha.border.default})"
+              "value": "hsla({config.color.accent.hue.default}, {config.color.accent.saturation.default}, 75%, {config.color.accent.alpha.border.default})"
             }
           },
           "fg": {
@@ -564,7 +564,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.bg.default})"
+              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 75%, {config.color.info.alpha.bg.default})"
             }
           },
           "border": {
@@ -574,7 +574,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 50%, {config.color.info.alpha.border.default})"
+              "value": "hsla({config.color.info.hue.default}, {config.color.info.saturation.default}, 75%, {config.color.info.alpha.border.default})"
             }
           },
           "fg": {
@@ -600,7 +600,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 35%, {config.color.danger.alpha.bg.default})"
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 75%, {config.color.danger.alpha.bg.default})"
             }
           },
           "border": {
@@ -610,7 +610,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 30%, {config.color.grey.alpha.border.default})"
+              "value": "hsla({config.color.success.hue.default}, {config.color.success.saturation.default}, 75%, {config.color.success.alpha.border.default})"
             }
           },
           "fg": {
@@ -636,7 +636,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 45%, {config.color.danger.alpha.bg.default})"
+              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 75%, {config.color.danger.alpha.bg.default})"
             }
           },
           "border": {
@@ -646,7 +646,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 30%, {config.color.grey.alpha.border.default})"
+              "value": "hsla({config.color.warning.hue.default}, {config.color.warning.saturation.default}, 30%, {config.color.warning.alpha.border.default})"
             }
           },
           "fg": {
@@ -682,7 +682,7 @@
             },
             "translucent": {
               "type": "color",
-              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 50%, {config.color.grey.alpha.border.default})"
+              "value": "hsla({config.color.danger.hue.default}, {config.color.danger.saturation.default}, 50%, {config.color.danger.alpha.border.default})"
             }
           },
           "fg": {
