--- a/tokens/config.json
+++ b/tokens/config.json
@@ -150,6 +150,10 @@
           "default": {
             "value": "1%",
             "type": "other"
+          },
+          "translucent": {
+            "value": "1%",
+            "type": "other"
           }
         },
         "darken": {
@@ -214,6 +218,10 @@
           "default": {
             "value": "100%",
             "type": "other"
+          },
+          "translucent": {
+            "value": "100%",
+            "type": "other"
           }
         },
         "darken": {
@@ -233,15 +241,15 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.3",
+              "value": "0.5",
               "type": "other"
             },
             "hover": {
-              "value": "0.4",
+              "value": "0.6",
               "type": "other"
             },
             "active": {
-              "value": "0.5",
+              "value": "0.7",
               "type": "other"
             }
           },
@@ -256,6 +264,10 @@
           "default": {
             "value": "0.8",
             "type": "other"
+          },
+          "translucent": {
+            "value": "0.8",
+            "type": "other"
           }
         }
       },
@@ -268,6 +280,10 @@
         },
         "saturation": {
           "default": {
+            "value": "0%",
+            "type": "other"
+          },
+          "translucent": {
             "value": "0%",
             "type": "other"
           }
@@ -326,6 +342,10 @@
           "default": {
             "value": "100%",
             "type": "other"
+          },
+          "translucent": {
+            "value": "100%",
+            "type": "other"
           }
         },
         "darken": {
@@ -345,15 +365,15 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.3",
+              "value": "0.5",
               "type": "other"
             },
             "hover": {
-              "value": "0.4",
+              "value": "0.6",
               "type": "other"
             },
             "active": {
-              "value": "0.5",
+              "value": "0.7",
               "type": "other"
             }
           },
@@ -388,6 +408,10 @@
           "default": {
             "value": "100%",
             "type": "other"
+          },
+          "translucent": {
+            "value": "80%",
+            "type": "other"
           }
         },
         "darken": {
@@ -407,15 +431,15 @@
         "alpha": {
           "bg": {
             "default": {
-              "value": "0.4",
+              "value": "0.6",
               "type": "other"
             },
             "hover": {
-              "value": "0.5",
+              "value": "0.7",
               "type": "other"
             },
             "active": {
-              "value": "0.6",
+              "value": "0.8",
               "type": "other"
             }
           },
@@ -443,6 +467,10 @@
         "saturation": {
           "default": {
             "value": "100%",
+            "type": "other"
+          },
+          "translucent": {
+            "value": "90%",
             "type": "other"
           }
         },
@@ -498,6 +526,10 @@
         },
         "saturation": {
           "default": {
+            "value": "90%",
+            "type": "other"
+          },
+          "translucent": {
             "value": "90%",
             "type": "other"
           }
